# CCPi-Quantification

./: CMakeLists.txt  LICENSE  README.md
Avizo/: CMakeLists.txt  README.txt
Avizo-packages/: Avizopackages.vc90.sln  GNUmakefile  allAvizopackages.vc90.vcproj  docAvizopackages.vc90.vcproj
Avizo-packages-800/: Avizopackages800.vc100.opensdf  Avizopackages800.vc100.sln  docAvizopackages800.vc100.vcxproj
Avizo-packages-800/setupcache/: activepackages  argscache  packagedirs
Avizo-packages-800/share/resources/: CCPi.rc
Avizo-packages-800/src/: version.h
Avizo-packages-800/src/CCPi/: CCPi.vc100.vcxproj  CCPi.vc100.vcxproj.filters  CCPiAccessibleVolume.h  CCPiParticleTracker.h  CCPiParticleTracking.cpp  CCPiParticleTracking.h  CCPiSimpleHistogramThresholding.cpp  CCPiTrack.cpp  Package  Quan3D.cpp  api.h  init.cpp  winversion.h  winversion.rc
Avizo-packages/src/tutorial/: CCPiAccessibleVolume.h  CCPiComputeThreshold.cpp  CCPiComputeThreshold.h  CCPiKMeansFilterITK.cpp  CCPiKMeansFilterITK.h  CCPiLabelQuantification.h  CCPiParticleTracking.h  CCPiTrack.h  GNUmakefile  Package  init.cpp  tutorial.vc90.vcproj  tutorialAPI.h  version.cpp
Avizo/src/: GNUmakefile
Avizo/src/CCPi/: CCPiAccessibleVolume.cpp  CCPiAccessibleVolume.h  CCPiAccessibleVolumeITKImpl.h  CCPiAvizoDLSReader.cpp  CCPiAvizoNexusCmdReader.cpp  CCPiAvizoNexusCmdReader.h  CCPiAvizoNexusReader.cpp  CCPiAvizoUserInterface.cpp  CCPiKMeansFilterITK.cpp  CCPiKMeansFilterITK.h  CCPiLabelQuantification.cpp  CCPiLabelQuantification.h  CCPiParticle.cpp  CCPiParticle.h  CCPiParticleTracking.h  CCPiSimpleHistogramThresholding.cpp  CCPiSimpleHistogramThresholding.h  Package  QuanWorker.hpp  version.cpp
CMake/: CCPiQuantificationConfig.cmake.in  CCPiQuantificationConfigVersion.cmake.in  FindAvizo.cmake  api.h.in
Core/: CCPiAccessibleVolumeITKImpl.cpp  CCPiAccessibleVolumeITKImpl.h  CCPiAccessibleVolumeInputImages.cpp  CCPiAccessibleVolumeInputImages.h  CCPiConsoleUserInterface.cpp  CCPiConsoleUserInterface.h  CCPiDefines.h  CCPiImageData.h  CCPiLabelQuantificationITKImpl.h  CCPiLabelQuantificationResult.cpp  CCPiLabelQuantificationResult.h  CCPiParticle.h  CCPiParticleTracker.cpp  CCPiParticleTracker.h  CCPiSimpleHistogramThresholdingITKImpl.cpp  CCPiSimpleHistogramThresholdingITKImpl.h  CCPiTrack.h  CCPiUserApplicationInterface.h  CMakeLists.txt  Quan3D.cpp  Quan3D.hpp  QuanWorker.cpp  QuanWorker.hpp
Core/NexusWidget/: CCPiNexusReader.cpp  CCPiNexusReader.h  CCPiNexusSubsetWidget.cpp  CCPiNexusSubsetWidget.h  CCPiNexusTreeItem.cpp  CCPiNexusTreeItem.h  CCPiNexusTreeModel.cpp  CCPiNexusTreeModel.h  CCPiNexusWidget.ui  CCPiNexusWidgetDialog.cpp  CCPiNexusWidgetDialog.h  CMakeLists.txt
Core/NexusWidget/test/: CCPiNexusWidgetTest.cpp  CMakeLists.txt
Core/NexusWidget/test/Data/: CMakeLists.txt
Core/test/: AccessibleVolumeTest.cpp  CMakeLists.txt  CTestConfig.cmake
Core/test/Data/: CMakeLists.txt
Docs/: CCPi Quantification Userguide.docx
Docs/dev_guide/: Makefile  conf.py  index.rst  introduction.rst  make.bat  source.rst
ImageJ/: AccessibleVolumePluginFilter_.java  CCPiAccessibleVolume.i  CCPiAccessibleVolume.java  CCPiAccessibleVolumeITKImpl.java  CCPiAccessibleVolumeInputDialog.form  CCPiAccessibleVolumeInputImages.java  CCPiAccessibleVolumeJNI.java  CCPiAccessibleVolume_wrap.cxx  CCPiImageJUserInterface.java  CMakeLists.txt  IntList.java  LabelQuantification_.java  MapDoubleDouble.java  MapIterator.java  SWIGTYPE_p_itk__ImageT_unsigned_char_3_t__Pointer.java
Installer/Windows/: CCPi Avizo Plugin.iss  CCPi ImageJ Plugin.iss  CCPi Paraview Plugin.iss  README.txt  Thumbs.db
Installer/Windows/ImageJ/: README.txt
Installer/Windows/Paraview/: README.txt
MXIF/AccessibleVolume/: 11_Distinguishable_Colours.vvt  Makefile  vvAccessibleVolume.cpp  vvAccessibleVolume.vcproj
MXIF/ConnectedComponent/: Makefile  vvConnectedComponent.cpp  vvConnectedComponent.vcproj
MXIF/EllipsoidFitting/: EllipsoidFitting.cpp  EllipsoidFitting.hpp  EllipsoidWorker.cpp  EllipsoidWorker.hpp  Makefile  vvEllipsoidFitting.cpp  vvEllipsoidFitting.vcproj
MXIF/Quan3D/: Doxyfile  Makefile  vvHelper.c  vvHelper.h  vvQuan3D.c
MXIF/Quan3D++/: AppQuan3D.cpp  Doxyfile  Makefile  Quan3D.cpp  Quan3D.hpp  QuanWorker.cpp  vvQuan3D.cpp  vvQuan3D.vcproj
MXIF/SimpleHistogramThresholding/: Makefile  vvSimpleHistogramThresholding.cpp
MXIF/vtkDistanceMap/: Makefile  vvVTKDistanceMap.cpp
Paraview/AccessibleVolume/: CCPiAccessibleVolume.xml  CCPiAccessibleVolumeParaviewImpl.cxx  CCPiAccessibleVolumeParaviewImpl.h  CCPiLabelQuantificationParaviewImpl.cxx  CCPiNexusReader.xml  CCPiNexusReaderParaviewImpl.cxx  CCPiNexusReaderParaviewImpl.h  CCPiParaviewUserInterface.cpp  CCPiParaviewUserInterface.h  CCPiSimpleHistogramThresholdingParaviewImpl.cxx  CCPiSimpleHistogramThresholdingParaviewImpl.h  CMakeLists.txt
Python/: CCPi.i  CCPi.py  CCPiCore.i  CCPi_wrap.cxx  CCPi_wrap.h  setup.py
Python/conda-recipe/: bld.bat  build.sh  meta.yaml
Python/src/: ccpi_quantification.cpp
Python/test/: test_accessiblevolume.py  test_labelquantification.py
Wrappers/Avizo/: CMakeLists.txt  GNUmakefile.rules  GNUmakefile.setroot
Wrappers/Avizo/src/CCPi/: CCPiAccessibleVolume.h  CCPiAvizoDLSReader.cpp  CCPiKMeansFilterITK.cpp  CCPiKMeansFilterITK.h  CCPiLabelQuantification.h  CCPiParticleTracking.cpp  CCPiSimpleHistogramThresholding.cpp  CCPiSimpleHistogramThresholding.h  version.cpp
Wrappers/ImageJ/: CCPiAccessibleVolume.i  CCPiAccessibleVolumeITKImpl.java  CCPiAccessibleVolumeInputDialog.java  CCPiAccessibleVolumeInputImages.java  CCPiAccessibleVolume_wrap.h  CCPiConsoleUserInterface.java  CCPiImageDataUnsignedChar.java  CCPiLabelQuantificationITKImplUnsignedChar.java  CCPiLabelQuantificationResult.java  CCPiSimpleHistogramThresholdingITKImplUnsignedChar.java  CCPiUserApplicationInterface.java  CMakeLists.txt  FloatVector.java  MapType.java  SimpleHistogramThresholding_.java  StringVector.java
Wrappers/Paraview/: CCPiAccessibleVolume.xml  CCPiAccessibleVolumeParaviewImpl.h  CMakeLists.txt
Wrappers/Python/: setup.py
(+26 files in other folders)
