cmake_minimum_required(VERSION 2.8.8 FATAL_ERROR)

PROJECT(CCPiNexusWidget)

IF(NOT JNI_FOUND)
FIND_PACKAGE(Qt4 REQUIRED)

SET(CCPiNexusWidget_SOURCES CCPiNexusTreeModel.cpp CCPiNexusTreeItem.cpp CCPiNexusWidgetDialog.cpp CCPiNexusReader.cpp)
SET(CCPiNexusWidget_HEADERS CCPiNexusTreeModel.h CCPiNexusWidgetDialog.h)
SET(CCPiNexusWidget_FORMS CCPiNexusWidget.ui)

QT4_WRAP_CPP(CCPiNexusWidget_HEADERS_MOC ${CCPiNexusWidget_HEADERS})
QT4_WRAP_UI(CCPiNexusWidget_FORMS_HEADERS ${CCPiNexusWidget_FORMS})

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

FIND_PACKAGE(HDF5 REQUIRED)
INCLUDE_DIRECTORIES(../ ${HDF5_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

ADD_LIBRARY(CCPiNexusWidget ${CCPiNexusWidget_SOURCES} 
				${CCPiNexusWidget_FORMS_HEADERS} 
				${CCPiNexusWidget_HEADERS_MOC})
TARGET_LINK_LIBRARIES(CCPiNexusWidget ${QT_LIBRARIES}  ${HDF5_LIBRARIES})
SUBDIRS(test)
ELSE()
#FIND_PACKAGE(HDF5 REQUIRED)
#INCLUDE_DIRECTORIES(../ ${HDF5_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
#ADD_LIBRARY(CCPiNexusWidget CCPiNexusReader.cpp)
#TARGET_LINK_LIBRARIES(CCPiNexusWidget ${HDF5_LIBRARIES})
ENDIF()
