IF(BUILD_TESTING)
   ENABLE_TESTING()   


INCLUDE_DIRECTORIES (../)
ADD_EXECUTABLE(CCPiNexusWidgetTest CCPiNexusWidgetTest.cpp) 
TARGET_LINK_LIBRARIES(CCPiNexusWidgetTest CCPiCore CCPiNexusWidget)
	
ADD_TEST(NAME CCPiNexusWidgetTest 	COMMAND CCPiNexusWidgetTest "Data/test-nexus.nxs")	

SUBDIRS(Data)

IF(WIN32)
set(PATH_STRING "$ENV{PATH};${ITK_LIBRARY_DIRS}/Release;${ITK_LIBRARY_DIRS}") 
STRING(REPLACE "\\;" ";" PATH_STRING "${PATH_STRING}")
STRING(REPLACE ";" "\\;" PATH_STRING "${PATH_STRING}")
set_tests_properties(CCPiNexusWidgetTest PROPERTIES ENVIRONMENT "PATH=${PATH_STRING}") 
ENDIF()

ENDIF(BUILD_TESTING)